<resources>
    <string name="app_name">Cairo Metro</string>
    <string name="start_a_trip">start a trip</string>
    <string name="metro_map">metro map</string>
    <string name="language">language</string>
    <string name="chooseLanguage">Choose Language</string>
    <string name="Cancel">Cancel</string>
    <string name="Alert">Alert !</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Do_you_want_to_exit">Do you want to exit ?</string>
    <string name="time">Time :</string>
    <string name="count">Count :</string>
    <string name="price">Price :</string>
    <string name="hm">00h : 00m</string>
    <string name="egp">0 EGP</string>
    <string name="stations">0 Stations</string>
    <string name="direction">Direction :</string>
    <string name="noDirection">No Direction</string>
    <string name="interchange">Interchange :</string>
    <string name="noStation">No Station</string>
    <string name="thenDirection">Then Direction Of :</string>
    <string name="noDirec">No Direction</string>
    <string name="shortestRoute">Shortest Rote</string>
    <string name="route">Route</string>
    <string name="selectFromStation">Select from Station</string>
    <string name="selectToStation">Select to Station</string>
    <string name="nearby">nearby</string>
    <string name="anotherRoute">Another Route</string>
    <string name="search">search</string>
    <string name="newTrip">new trip</string>
    <string name="timeLeft">time left</string>
    <string name="pleaseSelectYourStations">please select your stations</string>
    <string name="pleaseSelectFromStation">please select from station</string>
    <string name="pleaseSelectToStation">please select to station</string>
    <string name="errorFetchingLocation">Error fetching location</string>
    <string name="pleaseSelectYourStationss">please select your stations</string>
    <string name="youAreInTheSameStation">you are in the same station</string>
    <string name="select_station">Select Station</string>
    <string name="searchStation">Find your station</string>
    <string name="metroLines">metro lines</string>
    <string name="tripLog">trip log</string>
    <string name="nearestStationToMe">nearest station</string>
    <string name="contactUs">contact us</string>
</resources>